# ling

./: Diagram_editor.vpp
mparser/: .gitignore  CMakeLists.txt  main.cpp
mparser/res/: corpus.txt
mparser/src/: Dict.cpp  Dict.h  DictParse.cpp  DictParse.h  Form.cpp  Form.h  Lemma.cpp  Lemma.h
